Wed Feb 16 00:15:41 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

          [r4330] 2011-02-16 00:13  martinezm
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/CustomizationTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/DeploymentTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/GeneratorTab.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Presentation/TreeViewerDelegate.java:

          Added a progress monitor, notifications to the status bar, and moved
          code generation to a different thread. Updated some of the selection
          handling details trying to get the selections to work right.

Tue Feb 15 23:25:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:

          Corrected the use of Wait Sets and Status Conditions.
          The key change is that the condition must be checked before waiting.

Tue Feb 15 22:58:21 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/codegen/model/Sync.cpp:

          Use ACE_DEBUG logging.

Tue Feb 15 22:07:40 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

          [r4325] 2011-02-15 22:05  martinezm
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Provider/LocationPathItemProvider.java:
        * tools/modeling/plugins/org.opendds.modeling.sdk.model.edit/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Provider/LocationVariableItemProvider.java: