@@ -1,3 +1,14 @@
+Wed Feb 16 15:19:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.diagram.main/plugin.xml:
+
+          Define the Category for the New Wizards.
+
+        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/src/org/opendds/modeling/sdk/model/GeneratorSpecification/Generator/SdkGeneratorFactory.java:
+
+          Fix for refreshing dirs with absolute paths (from the Eclipse
+          workspace).
+
 Wed Feb 16 00:15:41 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>
 
           [r4330] 2011-02-16 00:13  martinezm
